[node name="HTTPRequest" type="HTTPRequest" parent="."]
[node name="NPCDialogue" type="Label" parent="."]
[gd_scene load_steps=2 format=2]
[ext_resource path="res://scripts/Scenario.gd" type="Script" id=1]

[node name="Scenario" type="Control"]
script = ExtResource( 1 )

[node name="Description" type="Label" parent="."]
[node name="Choice1" type="Button" parent="."]
[node name="Choice2" type="Button" parent="."]
[node name="Choice3" type="Button" parent="."]
[node name="ScoreHUD" type="Label" parent="."]
